--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -85,7 +85,7 @@ The Mn spins inside the chains lie mostly along the fourfold symmetry axis of th
 \begin{figure}
 	% \centering
 	\IncludeGraphics[width=0.9\textwidth]{unit_cell.png}
-	\caption{\label{fig:GdMn2O5_unit_cell}{\bf Unit cell and magnetic configuration of GdMn$_2$O$_5$.} The spheres signify Mn (purple), Gd (green) and Oxygen (red) ions. a) The magnetic unit cell with the zig-zag chains along the $a$-direction (cyan lines) denoting which Mn ions are linked with strong AFM exchange, leading to the $\bm{L}_1$ and $\bm{L}_2$ N\'eel vectors. The boundary of the structural unit cell is marked by the black. The yellow arrows denote the exchange paths between Gd and neighboring Mn ions in both chains, corresponding to $v_1$ and $v_2$. The two sources of the symmetric Heisenberg exchange striction are shown in (b) and (c). The black arrows signify the zero field orientation of the spins. The yellow arrows denote the expanding bonds due to alignment of spins and AFM exchange, and the blue arrows denote contracting bonds.}
+	\caption{\label{fig:GdMn2O5_unit_cell}{\bf Unit cell and magnetic configuration of GdMn$_2$O$_5$.} The spheres signify Mn (purple), Gd (green) and Oxygen (red) ions. a) The magnetic unit cell with the zig-zag chains along the $a$-direction (cyan lines) denoting which Mn ions are linked by large AFM exchange, leading to the $\bm{L}_1$ and $\bm{L}_2$ N\'eel vectors. The boundary of the structural unit cell is marked by the black. The yellow arrows denote the exchange paths between Gd and neighboring Mn ions in both chains, corresponding to $v_1$ and $v_2$. The two sources of the symmetric Heisenberg exchange striction are shown in (b) and (c). The black arrows indicate the zero field orientation of the spins. The yellow and blue arrows denote the expanding and contracting bonds, respectively.}
 \end{figure}
 The improper ferroelectricity is generated through the symmetric Heisenberg exchange striction, and the strong AFM exchanges combined with the geometric frustration of the Mn chains~\cite{Choi2008}.
 This frustration appears due to the odd number of AFM bonds in the Mn pentagons that surround each Gd ion, as can be seen in Fig.~\ref{fig:GdMn2O5_unit_cell}(a) and more clearly in panel (c).
@@ -375,9 +375,9 @@ We now turn to a discussion of the results obtained from the simulations of the 
     %\includegraphics[width=\linewidth]{fig/L1L2_heatmap.png}
     \caption{\label{fig:GdMn2O5_theory}{\bf Simulation of magnetoelectric behavior.}
     (a-c) Evolution of electric polarization $P_b$ during the magnetic field sweep cycle for the three angle dependent regimes. 
-   In each panel, the changes of the curve color indicate the same progression of the sweep cycle as Fig~\ref{fig:GdMn2O5_experiment1}. The four-state switching is seen for the field at the magic orientation. 
+   In each panel, the changes of the curve color indicate the same progression of the sweep cycle as in Fig~\ref{fig:GdMn2O5_experiment1}. The four-state switching is seen for the field at the magic orientation. 
     The insets indicate the corresponding switching paths and winding numbers (see Section~\ref{sec:GdMn2O5_topology}).
-    (d-f) Trajectories (in green) in the space of the N\'eel vectors orientations, $(\phi_{\rm L_1},\phi_{\rm L_2})$, through the field sweep cycles in different regimes. The color map shows the energy landscape in the vicinity of the switching fields. 
+    (d-f) Trajectories (in white) in the space angles $(\phi_{\rm L_1},\phi_{\rm L_2})$, through the field sweep cycles in different regimes. The color map shows the energy landscape in the vicinity of the switching fields. 
 }
 \end{figure}
 
@@ -412,7 +412,7 @@ These symmetry operations are indicated by the black arrows of the top left pane
 \begin{figure*}[h!]
 	\centering
 	\IncludeGraphics[width=\textwidth]{field_heatmap1}
-	\caption{{\bf Energy Surfaces in terms of $(\phi_{L_1}, \phi_{L_2})$ for $\phi_H =+10^\circ$.} The shaded dots denote the four degenerate minima. The full white dot corresponds to the example situation discussed in the main text. An indication of its trajectory during a double up--down field sweep is given by the shaded lines. The two black arrows denote the time-reversal (TR) and inversion (I) operations.\label{fig:GdMn2O5_heatmap}}
+	\caption{{\bf Energy surfaces in terms of $(\phi_{L_1}, \phi_{L_2})$ for $\phi_H =+10^\circ$.} The shaded dots denote the four degenerate minima. The full white dot corresponds to the example situation discussed in the main text. An indication of its trajectory during a double up--down field sweep is given by the shaded lines. The two black arrows denote the time-reversal (TR) and inversion (I) operations.\label{fig:GdMn2O5_heatmap}}
 \end{figure*}
 \\\\
 When the strength of the magnetic field increases, we see that two long vertical ``valleys'' appear along the $\phi_{L_1}$ direction of the energy surface, separated by $\pi$ along $\phi_{L_2}$.
@@ -445,8 +445,8 @@ We thus turn to a more careful investigation of the barriers, first by studying 
 \begin{figure}[h]
     \IncludeGraphics{neb}
     \caption{\label{fig:GdMn2O5_neb}{\bf Nudged Elastic Bands calculation.}
-    a) Evolution of transition barriers between states 1, 2, 3, 4 as the magnetic field is swept through the hysteresis at $\phi_H = 10^\circ$. The plots are shifted vertically, and magneto-dipolar interactions were enhanced by a factor of 5.3 for clarity. This latter increases the width of the hysteresis region. The curve colors encode the corresponding magnetic field strength. The blue circles and arrows show the trajectory of the energy minimum due to field sweeps.
-    b) The red square and corresponding schematic on the right shows the asymmetric evolution of the barrier from state 2 to 1, and from 2 to 3 around the critical field $H^\ast$ where the barriers are of equal height.
+    a) Evolution of transition barriers between states 1, 2, 3, 4 as the magnetic field is swept through the hysteresis region at $\phi_H = 10^\circ$. The plots are shifted vertically, and the model parameters were slightly altered for clarity. The latter increases the width of the hysteresis region. The curve colors encode the corresponding magnetic field strength. The blue circles and arrows show the trajectory of the energy minimum during the field sweeps.
+    b) The red square and corresponding schematic on the right shows the asymmetric evolution of the barrier 12 between states 2 and 1, and 23 between states 2 and 3, around the critical field $H^\ast$ where the barriers are of equal height.
     }
 \end{figure}
 %
@@ -558,7 +558,7 @@ A small variation to $K_L$, the strength of the Mn single-ion anisotropy, on the
 This is not surprising, since the behavior of the Mn chains is very similar to that of the usual spin-flop transition, which crucially depends on the easy-axis anisotropy. This latter point will be discussed further in the next Section.
 \begin{figure}
 	\IncludeGraphics{winding_modelparam.png}
-	\caption{\label{fig:GdMn2O5_windingvsparam} {\bf Magic Angle region.} The panels demonstrate the influence of selected model parameters on the magic angle region. In each panel only the parameter labeled on the vertical axis is varied, whereas the others are kept at the values reported in the Methods Section \ref{sec:GdMn2O5_methods}, and used for Fig.~\ref{fig:GdMn2O5_theory}. All parameters are reported in units of meV. The blue regions denote the angles $\phi_H$ for which the low angle switching regime appears, while the red denotes the same for the high angle switching regime. The white boundary region is where the magic angle switching regime occurs, characterized by a winding number of 1, and is topologically protected by the neighboring regimes.}
+	\caption{\label{fig:GdMn2O5_windingvsparam} {\bf Magic Angle region.} The panels demonstrate the influence of selected model parameters on the magic angle region. In each panel only the parameter labeled on the vertical axis is varied, whereas the others are kept at the values reported in the Methods Section \ref{sec:GdMn2O5_methods}. All parameters are reported in units of meV. The blue and red regions denote the angles $\phi_H$ for which the low angle and high angle switching regime appear, respectively. The grey boundary region is where the magic angle switching regime occurs, characterized by a winding number of 1, and is topologically protected by the neighboring regimes.}
 \end{figure}
 \\\\
 We have so far given a detailed description of the observed behavior, experimentally and from the simulations of our effective model.
