--- a/papers/Theory/Theory.tex
+++ b/papers/Theory/Theory.tex
@@ -118,15 +118,8 @@ The BF can be written in this case as a straightforward discrete Fourier transfo
 with $\unkKet{n}{k}$ the periodic part of the BF, $\WanKet{n}{R}$ the localized WF centered in the unit cell defined by lattice vector $\bm{R}$, and $n$ the band index.
 The comparison between BFs and WFs is made in Fig.~\ref{fig:Theory_blochvswan}.
 \begin{figure}
-	\begin{subfigure}{0.49\textwidth}
-		\caption{}
-		\IncludeGraphics{blochvswan.png}
-	\end{subfigure}
-	\begin{subfigure}{0.49\textwidth}
-		\caption{}
-		\IncludeGraphics{wanwindows.png}
-	\end{subfigure}
-	\caption{\label{fig:Theory_blochvswan} a) A comparison between Bloch functions (left) and Wannier functions (right). The green line in the left panel denotes the envelope function $\eikr{r}$. This image was taken from Ref.~\cite{Marzari2012}. b) Bandstructure of semiconductor GeTe, demonstrating three cases for Wannierization: red is a single disconnected band, green shows a disconnected composite manifold of connected bands, blue shows the situation when bands need to be disentangled.}
+	\IncludeGraphics{blochvswan.png}
+	\caption{\label{fig:Theory_blochvswan} a) A comparison between Bloch functions (left) and Wannier functions (right). The green graph in the left panel denotes the envelope function $\eikr{r}$, whereas the black one denotes the periodic part $\unkKet{n}{k}$. This image was taken from Ref.~\cite{Marzari2012}. b) Bandstructure of semiconductor GeTe, demonstrating three cases for Wannierization: red is a single disconnected band, green shows a disconnected composite manifold of connected bands, blue shows the situation when bands need to be disentangled.}
 \end{figure}
 When $k=0$ we can see that $\unkKet{n}{k}$ is simply the sum over the WFs centered at different unit cells.
 In the case of $k \neq 0$, similar to how the envelope part modulates the periodic part of the BF, the contribution of each WF to the total sum needs to be modulated in a discrete way through $\eikr{R}$.
