--- a/papers/references.bib
+++ b/papers/references.bib
@@ -2933,16 +2933,6 @@ year = {2008}
     pmid = {25246403},
 }
 
-@book{Laghzizil1993,
-    title = {{Solid state}},
-    year = {1993},
-    booktitle = {Solid State Ionics},
-    author = {Mermin, Ashcroft and},
-    pages = {137--143},
-    volume = {67},
-    isbn = {0030839939}
-}
-
 @book{Lovesey2014,
     title = {{Topological Insulators and Topological Superconductors, by B. Andrei Bernevig with Taylor L. Hughes}},
     year = {2014},
@@ -6725,5 +6715,52 @@ pages = {1758--1775},
 title = {{From ultrasoft pseudopotentials to the projector augmented-wave method}},
 volume = {59},
 year = {1999}
+}
+
+@article{Ashcroft,
+author = {Ashcroft, Neil W. and Mermin, N. David and Rodriguez, Sergio},
+doi = {10.1119/1.11117},
+file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Mermin - 1993 - Solid state.pdf:pdf},
+isbn = {0030839939},
+issn = {0002-9505},
+journal = {American Journal of Physics},
+mendeley-groups = {Books},
+month = {jan},
+number = {1},
+pages = {116--117},
+title = {{Solid State Physics}},
+url = {http://aapt.scitation.org/doi/10.1119/1.11117},
+volume = {46},
+year = {1978}
+}
+
+@article{Inoue2015,
+abstract = {The photovoltaic (PV) effect in polar materials offers great potential for light-energy conversion that generates a voltage beyond the bandgap limit of present semiconductor-based solar cells. Ferroelectrics have received renewed attention because of the ability to deliver a high voltage in the presence of ferroelastic domain walls (DWs). In recent years, there has been considerable debate over the impact of the DWs on the PV effects, owing to lack of information on the bulk PV tensor of host ferroelectrics. In this article, we provide the first direct evidence of an unusually large PV response induced by ferroelastic DWs-termed-PV effect. The precise estimation of the bulk PV tensor in single crystals of barium titanate enables us to quantify the giant PV effect driven by 90° DWs. We show that the DW-PV effect arises from an effective electric field consisting of a potential step and a local PV component in the 90° DW region. This work offers a starting point for further investigation into the DW-PV effect of alternative systems and opens a reliable route for enhancing the PV properties in ferroelectrics based on the engineering of domain structures in either bulk or thin-film form.},
+author = {Inoue, Ryotaro and Ishikawa, Shotaro and Imura, Ryota and Kitanaka, Yuuki and Oguchi, Takeshi and Noguchi, Yuji and Miyayama, Masaru},
+doi = {10.1038/srep14741},
+file = {:home/ponet/Downloads/srep14741.pdf:pdf},
+issn = {20452322},
+journal = {Scientific Reports},
+pages = {1--9},
+publisher = {Nature Publishing Group},
+title = {{Giant photovoltaic effect of ferroelectric domain walls in perovskite single crystals}},
+url = {http://dx.doi.org/10.1038/srep14741},
+volume = {5},
+year = {2015}
+}
+@article{Korbel2018,
+abstract = {First-principles calculations for pristine neutral ferroelectric domain walls in BiFeO3 reveal that excess electrons are selectively trapped by the domain walls, while holes are only weakly attracted. Such trapped excess electrons may be responsible for the thermally activated electrical conductivity at domain walls observed in experiments. In the case of a periodic array of domain walls, the trapped excess electrons create a zigzag potential, whose amplitude depends on the electron concentration in the material and the domain-wall distance. The potential is asymmetric for 71° and 109° domain walls. This could modify the open-circuit voltage in a solar cell and hence influence the photoelectric effect in BiFeO3.},
+author = {K{\"{o}}rbel, Sabine and Hlinka, Jirka and Sanvito, Stefano},
+doi = {10.1103/PhysRevB.98.100104},
+file = {:home/ponet/Downloads/PhysRevB.98.100104.pdf:pdf},
+issn = {2469-9950},
+journal = {Physical Review B},
+month = {sep},
+number = {10},
+pages = {100104},
+title = {{Electron trapping by neutral pristine ferroelectric domain walls in BiFeO$_3$}},
+url = {https://link.aps.org/doi/10.1103/PhysRevB.98.100104},
+volume = {98},
+year = {2018}
 }
 
